apps/runstate/03-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: runstate-api
  namespace: runstate
spec:
  replicas: 2
  selector:
    matchLabels:
      app: runstate-api
  template:
    metadata:
      labels:
        app: runstate-api
    spec:
      containers:
        - name: api
          image: ghcr.io/ritikaxg/runstate-api-go
          ports:
            - containerPort: 3001

          resources:
            requests: # minimum resource K8s guarantees
              cpu: "100m" # 100 millicpu , each runstate-api pod is guaranteed 0.1 CPU core
              memory: "128Mi" # Each pod requests 128MB RAM.
            limits: # maximum resource container is allowed to use
              cpu: "500m" # container cannot exceed 0.5 CPU core
              memory: "512Mi" # Pod cannot exceed 512MB RAM.

          readinessProbe: # checks if pod is ready
            httpGet:
              path: /api/v1/health/
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:  # checks if container is still alive
            httpGet:
              path: /api/v1/health/
              port: 3001
            initialDelaySeconds: 15
            periodSeconds: 20
