apps/runstate/06-worker-monitoring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-monitoring
  namespace: runstate
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: worker-monitoring
  template:
    metadata:
      labels: 
        app: worker-monitoring
    spec:
      containers:
        - name: worker-monitoring
          image: ghcr.io/ritikaxg/runstate-api-go:sha-6d1f075
          command: ["/worker-monitoring"]
