apps/runstate/04-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: runstate-api
  namespace: runstate
spec:
  selector:
    app: runstate-api
  ports:
    - name: http
      port: 80
      targetPort : 3001
  type: ClusterIP
