apps/runstate/09-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: runstate-api
  namespace: runstate
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx

  tls:
    - hosts:
      - api.runstate.ritikaxg.co.in
      secretName: runstate-tls

  rules:
    - host: api.runstate.ritikaxg.co.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: runstate-api
                port: 
                  number: 80
